# embedded_evt_bus

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: DESIGN.md  PORTING.md
include/evt_bus/: evt_bus.h  evt_bus_config.h  evt_bus_types.h
ports/esp-idf/evt_bus/: CMakeLists.txt  Kconfig.projbuild
ports/freertos/: evt_bus_port_freertos.c  evt_bus_port_freertos.h  evt_bus_port_freertos_config.h
src/: evt_bus_core.c  evt_bus_core.cpp  evt_bus_port.c
tests/: fake_evt_bus_backend.c  test_evt_bus.c  test_helpers.h
tests/freertos_stub/: FreeRTOS.h  task.h
tests/freertos_stub/freertos/: FreeRTOS.h  queue.h  semphr.h  task.h
